Fixed broken team page when pictures are too big

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -268,6 +268,12 @@ h4 {
 #team {
     .organizer {
         text-align: center;
+        .picture {
+            max-width: 300px;
+            img {
+                max-width: 100%;
+            }
+        }
     }
 }
 
